--- a/css/index.css
+++ b/css/index.css
@@ -331,6 +331,12 @@ html, body {
   padding-top: 50px;
 }
 
+.wrapper section h6 {
+  text-align: center;
+  font-size: 20px;
+  margin: 60px 0 20px;
+}
+
 .wrapper section .titleBox {
   text-transform: uppercase;
   color: #f2f2f2;
@@ -367,12 +373,6 @@ html, body {
   font-size: 14px;
 }
 
-.wrapper section .skillBox p {
-  text-align: center;
-  font-size: 20px;
-  margin-bottom: 20px;
-}
-
 .wrapper section .skillBox .item .skilltype {
   width: 100px;
   float: left;
@@ -391,5 +391,13 @@ html, body {
   background-color: #a6a6a6;
   padding: 3px 10px;
   border-radius: 6px;
+}
+
+.wrapper section .sliderWall li:first-child h6 {
+  margin-top: 0;
+}
+
+.wrapper section .sliderWall li .sliderBox .slider_item {
+  padding: 0 10px;
 }
 /*# sourceMappingURL=index.css.map */
