--- a/scss/index.scss
+++ b/scss/index.scss
@@ -12,6 +12,11 @@ html,body{
         width: 80%;
         margin: 0 auto;
         padding-top: 50px;
+        h6{
+            text-align: center;
+            font-size: 20px;
+            margin: 60px 0 20px;
+        }
         .titleBox{
             text-transform:uppercase;
             color: #f2f2f2;
@@ -45,11 +50,6 @@ html,body{
         .skillBox{
             margin-top: 50px;
             font-size: 14px;
-            p{
-                text-align: center;
-                font-size: 20px;
-                margin-bottom: 20px;
-            }
             .item{
                 .skilltype{
                     width: 100px;
@@ -66,6 +66,18 @@ html,body{
                         background-color: #a6a6a6;
                         padding: 3px 10px;
                         border-radius: 6px;
+                    }
+                }
+            }
+        }
+        .sliderWall{
+            li{
+                &:first-child{
+                    h6{ margin-top: 0;}
+                }
+                .sliderBox{
+                    .slider_item{
+                        padding: 0 10px;
                     }
                 }
             }
