--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,7 +6,6 @@ header{
     z-index: 3;
     left: 0;
     top: 0;
-    
     .logo {
         display: block;
         // float: left;
@@ -29,7 +28,9 @@ header{
         padding: 28px 20px;
         position: relative;
         user-select: none;
-        @media (min-width: 768px) { display: none;}
+        @media (min-width: 768px) { 
+            display: none;
+        }
         span.navicon {
             background: #333;
             display: block;
