--- a/scss/index.scss
+++ b/scss/index.scss
@@ -76,6 +76,7 @@ html,body{
                     h6{ margin-top: 0;}
                 }
                 .sliderBox{
+                    width: 810px;
                     .slider_item{
                         padding: 0 10px;
                     }
