--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,11 +1,14 @@
 header{
-    width: 360px;
+    width: 320px;
+    height: 100%;
     min-height: 100%;
-    background-color: #efefef;
     position: fixed;
     z-index: 3;
     left: 0;
     top: 0;
+    @media (max-width: 768px) {
+        width: 100%;
+    }
     .logo {
         display: block;
         // float: left;
@@ -24,9 +27,10 @@ header{
     .menu-icon{
         cursor: pointer;
         display: inline-block;
-        float: right;
+        float: left;
         padding: 28px 20px;
         position: relative;
+        z-index: 10;
         user-select: none;
         @media (min-width: 768px) { 
             display: none;
@@ -52,62 +56,78 @@ header{
           }
     }
 
-    ul.menu{
+    nav{
         width: 100%;
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        overflow: hidden;
-        max-height: 0;
-        transition: all .2s ease-out;
-        transform-origin: 50% 50%;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        @media (min-width: 768px) {
-            max-height: none;
+        height: 100%;
+        min-height: 100%;
+        background-color: #efefef;
+        transition: all .3s;
+        @media (max-width: 768px) {
+            width: 0;
         }
-
-        li{
+        ul.menu{
             width: 100%;
-            height: inherit;
-            text-align: center;
-            // outline: 1px solid blue;
-            padding: 10px 20px;
-            @media (min-width: 768px) {
-                float: left;
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            overflow: hidden;
+            // max-height: none;
+            transition: all .2s ease-out;
+            transform-origin: 50% 50%;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            @media (max-width: 768px) {
+                width: 0;
+                // max-height: 100vh;
             }
-            a{
-                display: inline-block;
-                padding: 10px 0;
-                text-decoration: none;
-                border-bottom: 1px solid transparent;
-                transition: all .3s;
-                // outline: 1px solid red;
-                position: relative;
-                &:after{
-                    content: "";
-                    width: 0%;
-                    height: 2px;
-                    display: block;
-                    background-color: #000;
-                    position: absolute;
-                    bottom: 0;
-                    left: 50%;
-                    transform: translateX(-50%);
+    
+            li{
+                width: 100%;
+                height: inherit;
+                text-align: center;
+                // outline: 1px solid blue;
+                padding: 10px 20px;
+                @media (min-width: 768px) {
+                    float: left;
+                }
+                a{
+                    display: inline-block;
+                    padding: 10px 0;
+                    text-decoration: none;
+                    border-bottom: 1px solid transparent;
                     transition: all .3s;
-                }
-                &:hover{ 
+                    // outline: 1px solid red;
+                    position: relative;
                     &:after{
-                        width: 100%;
+                        content: "";
+                        width: 0%;
+                        height: 2px;
+                        display: block;
+                        background-color: #000;
+                        position: absolute;
+                        bottom: 0;
+                        left: 50%;
+                        transform: translateX(-50%);
+                        transition: all .3s;
                     }
-                }
-            } 
+                    &:hover{ 
+                        &:after{
+                            width: 100%;
+                        }
+                    }
+                } 
+            }
         }
-    }
-} 
-  .header .menu-btn:checked ~ .menu {
-    max-height: 240px;
+    } 
+
+}
+
+.header .menu-btn:checked ~ nav{
+    width: 100%;
+}
+  .header .menu-btn:checked ~ nav .menu {
+    width: 100%;
   }
   
   .header .menu-btn:checked ~ .menu-icon .navicon {
