--- a/scss/index.scss
+++ b/scss/index.scss
@@ -6,8 +6,11 @@ html,body{
     height: 100%;
 }
 .wrapper{
-    width: calc(100% - 360px);
+    width: calc(100% - 320px);
     float: right;
+    @media (max-width: 768px) { 
+        width: 100%;
+    }
     section{
         width: 80%;
         margin: 0 auto;
@@ -79,6 +82,60 @@ html,body{
                     width: 810px;
                     .slider_item{
                         padding: 0 10px;
+                        a{
+                            border: 1px solid #efefef;
+                            position: relative;
+                            &::before{
+                                content: "";
+                                width: 100%;
+                                height: 0;
+                                display: block;
+                                position: absolute;
+                                top: 0%;
+                                left: 0%;
+                                background-color: rgba(0,0,0,.7);
+                                transition: all .3s;
+                            }
+                            &::after{
+                                content: "看圖片";
+                                width: 80px;
+                                // height: 20px;
+                                // line-height: 20px;
+                                padding: 5px;
+                                display: block;
+                                font-size: 14px;
+                                position: absolute;
+                                top: 50%;
+                                left: 50%;
+                                transform: translate(-50%,-50%);
+                                text-align: center;
+                                color: #fff;
+                                border: 1px solid #fff;
+                                opacity: 0;
+                                visibility: hidden;
+                                transition: all .3s;
+                            }
+                            &:hover{
+                                &::before{
+                                    height: 100%;
+                                }
+                                &::after{
+                                    opacity: 1;
+                                    visibility: visible;
+                                }
+                            }
+                            &.gotoweb{
+                                &::after{
+                                    content: "看網站";
+                                }
+                            }
+                        }
+                        span{
+                            text-align: center;
+                            display: block;
+                            margin: 10px auto;
+                            color: #999;
+                        }
                     }
                 }
             }
